# trickle

./: .gitignore  README.md  TODO  trickle.cabal
executables/trickle/: Main.hs
test-suites/checks/: Main.hs
